--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "publish": "lerna publish"
   },
   "devDependencies": {
+    "have2": "^1.0.0-beta.1",
     "moysklad": "^0.0.3",
     "blue-tape": "^1.0.0",
     "dotenv": "^4.0.0",
