--- a/packages/moysklad-extension-queue/package.json
+++ b/packages/moysklad-extension-queue/package.json
@@ -18,9 +18,12 @@
     "tools",
     "extension"
   ],
+  "dependencies": {
+    "stampit": "^3.1.2"
+  },
   "devDependencies": {
     "moysklad": "^0.0.3",
-    "have2": "github:wmakeev/have2#d8445dff842c7ece17507018d70f71851f865c18",
+    "have2": "^1.0.0-beta.1",
     "blue-tape": "^1.0.0",
     "dotenv": "^4.0.0",
     "debug": "^2.6.3",
