--- a/packages/moysklad-tools/package.json
+++ b/packages/moysklad-tools/package.json
@@ -37,5 +37,8 @@
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1"
   },
+  "engines": {
+    "node": ">=4"
+  },
   "license": "MIT"
 }
