--- a/packages/moysklad-extension-tools/package.json
+++ b/packages/moysklad-extension-tools/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moysklad-extension-tools",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "description": "Набор инструментов (расширение для библиотеки moysklad)",
   "main": "index.js",
   "scripts": {
@@ -17,17 +17,17 @@
     "extension"
   ],
   "dependencies": {
-    "moysklad-tools": "^0.0.3",
+    "moysklad-tools": "^0.1.0",
     "stampit": "^3.1.2"
   },
   "devDependencies": {
-    "moysklad": "^0.0.3",
     "blue-tape": "^1.0.0",
-    "tap-spec": "^4.1.1",
     "eslint": "^3.13.0",
     "eslint-config-standard": "6.2.0",
     "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-standard": "^2.0.1"
+    "eslint-plugin-standard": "^2.0.1",
+    "moysklad": "^0.0.3",
+    "tap-spec": "^4.1.1"
   },
   "author": "Vitaliy V. Makeev",
   "license": "MIT"
