--- a/packages/moysklad-tools/package.json
+++ b/packages/moysklad-tools/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moysklad-tools",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "description": "Набор инструментов для библиотеки moysklad",
   "main": "lib/index.js",
   "scripts": {
@@ -23,19 +23,19 @@
     "moysklad-type-matchers": "^0.0.2"
   },
   "devDependencies": {
-    "moysklad": "^0.0.3",
-    "blue-tape": "^1.0.0",
-    "dotenv": "^4.0.0",
-    "debug": "^2.6.3",
-    "tap-spec": "^4.1.1",
-    "isomorphic-fetch": "^2.2.1",
     "babel-cli": "^6.24.0",
     "babel-plugin-transform-async-to-generator": "^6.22.0",
     "babel-preset-es2015-node4": "^2.1.1",
+    "blue-tape": "^1.0.0",
+    "debug": "^2.6.3",
+    "dotenv": "^4.0.0",
     "eslint": "^3.13.0",
     "eslint-config-standard": "6.2.0",
     "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-standard": "^2.0.1"
+    "eslint-plugin-standard": "^2.0.1",
+    "isomorphic-fetch": "^2.2.1",
+    "moysklad": "^0.0.3",
+    "tap-spec": "^4.1.1"
   },
   "engines": {
     "node": ">=4"
