--- a/packages/moysklad-extension-queue/package.json
+++ b/packages/moysklad-extension-queue/package.json
@@ -22,11 +22,12 @@
     "stampit": "^3.1.2"
   },
   "devDependencies": {
-    "moysklad": "^0.0.3",
+    "moysklad": "^0.1.0",
     "have2": "^1.0.0-beta.1",
     "blue-tape": "^1.0.0",
     "dotenv": "^4.0.0",
     "debug": "^2.6.3",
+    "tmp": "^0.0.31",
     "tap-spec": "^4.1.1",
     "isomorphic-fetch": "^2.2.1",
     "babel-cli": "^6.24.0",
