--- a/packages/moysklad-extension-tools/package.json
+++ b/packages/moysklad-extension-tools/package.json
@@ -17,17 +17,9 @@
     "extension"
   ],
   "dependencies": {
+    "@stamp/compose": "^1.0.1",
     "moysklad-tools": "^0.1.1",
-    "stampit": "^3.1.2"
-  },
-  "devDependencies": {
-    "blue-tape": "^1.0.0",
-    "eslint": "^3.13.0",
-    "eslint-config-standard": "6.2.0",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-standard": "^2.0.1",
-    "moysklad": "^0.1.0",
-    "tap-spec": "^4.1.1"
+    "stampit": "^4.0.2"
   },
   "author": "Vitaliy V. Makeev",
   "license": "MIT"
