--- a/package.json
+++ b/package.json
@@ -4,23 +4,42 @@
   "scripts": {
     "bootstrap": "lerna bootstrap --hoist",
     "test": "lerna run test",
-    "publish": "lerna publish"
+    "publish": "lerna publish",
+    "moysklad-extension-queue-test": "lerna run test --scope moysklad-extension-queue",
+    "moysklad-extension-tools-test": "lerna run test --scope moysklad-extension-tools",
+    "moysklad-tools-test": "lerna run test --scope moysklad-tools",
+    "moysklad-tools-metadata-test": "lerna run test --scope moysklad-tools-metadata",
+    "moysklad-type-matchers-test": "lerna run test --scope moysklad-type-matchers"
   },
-  "devDependencies": {
-    "have2": "^1.0.0-beta.1",
-    "moysklad": "^0.1.0",
-    "blue-tape": "^1.0.0",
-    "dotenv": "^4.0.0",
-    "debug": "^2.6.3",
-    "tap-spec": "^4.1.1",
-    "isomorphic-fetch": "^2.2.1",
-    "babel-cli": "^6.24.0",
-    "babel-plugin-transform-async-to-generator": "^6.22.0",
+  "engines": {
+    "node": ">=4"
+  },
+  "dependencies": {
+    "@stamp/compose": "^1.0.1",
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-preset-es2015-node4": "^2.1.1",
-    "eslint": "^3.13.0",
-    "eslint-config-standard": "6.2.0",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-standard": "^2.0.1"
+    "blue-tape": "^1.0.0",
+    "coveralls": "^3.0.0",
+    "debug": "^3.1.0",
+    "dotenv": "^4.0.0",
+    "eslint": "^4.12.0",
+    "eslint-config-standard": "10.2.1",
+    "eslint-plugin-import": ">=2.2.0",
+    "eslint-plugin-node": ">=4.2.2",
+    "eslint-plugin-promise": ">=3.5.0",
+    "eslint-plugin-standard": ">=3.0.0",
+    "have2": "^1.0.0-beta.1",
+    "isomorphic-fetch": "^2.2.1",
+    "lerna": "^2.5.1",
+    "lodash": "^4.17.4",
+    "lodash.partition": "^4.6.0",
+    "maybes": "^0.2.3",
+    "moysklad": "^0.3.1",
+    "nyc": "^11.3.0",
+    "stampit": "^4.0.2",
+    "tap-spec": "^4.1.1",
+    "tmp": "^0.0.33"
   },
   "license": "MIT"
 }
