--- a/packages/moysklad-extension-positions-smart-update/package.json
+++ b/packages/moysklad-extension-positions-smart-update/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint src",
     "clean": "rm -rf lib || :",
     "build": "npm run clean && cp -rf src lib && babel --out-dir lib ./src",
-    "test": "npm run lint && npm run build && blue-tape -r dotenv/config -r isomorphic-fetch lib/**/__tests__/*.test.js | tap-spec"
+    "_test": "npm run lint && npm run build && blue-tape -r dotenv/config -r isomorphic-fetch lib/**/__tests__/*.test.js | tap-spec"
   },
   "repository": {
     "type": "git",
