--- a/packages/moysklad-extension-queue/package.json
+++ b/packages/moysklad-extension-queue/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "lint": "eslint src",
     "clean": "rm -rf lib || :",
-    "build": "npm run clean && cp -rf src lib && babel --out-dir lib ./src",
-    "test": "npm run lint && npm run build && blue-tape -r dotenv/config -r isomorphic-fetch lib/**/__tests__/*.test.js | tap-spec"
+    "transpile": "npm run clean && cp -rf src lib && babel --out-dir lib ./src",
+    "test": "blue-tape -r dotenv/config -r isomorphic-fetch lib/**/__tests__/*.test.js | tap-spec",
+    "build": "npm run lint && npm run transpile && npm run test"
   },
   "repository": {
     "type": "git",
