--- a/packages/moysklad-extension-tools/package.json
+++ b/packages/moysklad-extension-tools/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint *.js",
-    "test": "npm run lint && blue-tape index.test.js | tap-spec"
+    "test": "blue-tape index.test.js | tap-spec",
+    "build": "npm run lint && npm run test"
   },
   "repository": {
     "type": "git",
