--- a/packages/moysklad-type-matchers/package.json
+++ b/packages/moysklad-type-matchers/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint types/*.js",
-    "test": "npm run lint && blue-tape types/__tests__/*.test.js | tap-spec"
+    "test": "blue-tape types/__tests__/*.test.js | tap-spec",
+    "build": "npm run lint && npm run test"
   },
   "repository": {
     "type": "git",
