--- a/package.json
+++ b/package.json
@@ -17,31 +17,26 @@
     "node": ">=4"
   },
   "dependencies": {
-    "@stamp/compose": "^1.0.1",
+    "@stamp/compose": "^1.0.2",
+    "have2": "^1.0.0-beta.1",
+    "maybes": "^0.2.3",
+    "moysklad": "^0.4.2",
+    "stampit": "^4.2.0"
+  },
+  "devDependencies": {
+    "isomorphic-fetch": "^2.2.1",
+    "tmp": "^0.1.0",
+    "tap-spec": "^5.0.0",
+    "nyc": "^13.3.0",
+    "lerna": "^3.13.1",
+    "debug": "^4.1.1",
+    "dotenv": "^7.0.0",
+    "standard": "^12.0.1",
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-preset-es2015-node4": "^2.1.1",
     "blue-tape": "^1.0.0",
-    "coveralls": "^3.0.0",
-    "debug": "^3.1.0",
-    "dotenv": "^4.0.0",
-    "eslint": "^4.12.0",
-    "eslint-config-standard": "10.2.1",
-    "eslint-plugin-import": ">=2.2.0",
-    "eslint-plugin-node": ">=4.2.2",
-    "eslint-plugin-promise": ">=3.5.0",
-    "eslint-plugin-standard": ">=3.0.0",
-    "have2": "^1.0.0-beta.1",
-    "isomorphic-fetch": "^2.2.1",
-    "lerna": "^2.5.1",
-    "lodash": "^4.17.4",
-    "lodash.partition": "^4.6.0",
-    "maybes": "^0.2.3",
-    "moysklad": "^0.3.1",
-    "nyc": "^11.3.0",
-    "stampit": "^4.0.2",
-    "tap-spec": "^4.1.1",
-    "tmp": "^0.0.33"
+    "coveralls": "^3.0.3"
   },
   "license": "MIT"
 }
